# commands-server

./: README.md  commands-server.cabal  stack.yaml
benchmarks/: Bench.hs
sources/Commands/Plugins/Spiros/: Main.hs  Server.hs
sources/Commands/Plugins/Spiros/Server/: Settings.hs  Setup.hs  Types.hs  Workflow.hs
sources/Commands/Plugins/Spiros/Shim/: QQ.hs
sources/Commands/Plugins/Spiros/Windows/: QQ.hs  Types.hs
sources/Commands/Servers/: Servant.hs
sources/Commands/Servers/Servant/: API.hs  Types.hs  V.hs
tests/: DocTest.hs
tests/Commands/Servers/: Test.hs
