name:                commands-server
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/commands-server#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/commands-server


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
                 Commands.Servers.Servant
                 Commands.Servers.Servant.API
                 Commands.Servers.Servant.API.Types
                 Commands.Servers.Servant.Types
                 Commands.Servers.Servant.V

                 Commands.Plugins.Spiros.Server.Types
                 Commands.Plugins.Spiros.Server
                 Commands.Plugins.Spiros.Server.Workflow
                 Commands.Plugins.Spiros.Server.Settings
                 Commands.Plugins.Spiros.Server.QQ

                 Commands.Plugins.Spiros.Server.Setup

                 Commands.Plugins.Spiros.Windows
                 Commands.Plugins.Spiros.Windows.Types
                 Commands.Plugins.Spiros.Windows.QQ

                 Commands.Plugins.Spiros.Shim
                 Commands.Plugins.Spiros.Shim.API
                 Commands.Plugins.Spiros.Shim.QQ

                --  Commands.Plugins.Spiros.Correct

-- other-modules:

                 Commands.Plugins.Spiros.Main

 build-depends:
                base >=4.7 && <5

              , transformers
              , mtl
              , containers
              , bytestring
              , stm ==2.4.*

              , spiros ==0.0.0
              , commands-core ==0.0.0
              , commands-server-types ==0.0.0
              , commands-frontend-DragonNaturallySpeaking ==0.0.0

              , workflow-types ==0.0.0
              , workflow-pure ==0.0.0
              , workflow-extra ==0.0.0

--              , template-haskell

              , deepseq
              , hashable
              , semigroups

              , aeson
              , servant-client
              , servant-server
              , servant
              , natural-transformation

              , lens
              , wai
              , warp
              , vinyl

              , haskeline

--              , exceptions
--              , free
--              , bifunctors
--              , profunctors
              , either
              , pipes
--              , formatting
--              , servant
              , Earley
--              , split
              , interpolatedstring-perl6 ==1.*
--              , wl-pprint-text
              , text
--              , aeson
--              , hashable
--              , unordered-containers
--              , async
--              , parallel
              , language-python ==0.5.*
              , filepath
              , clock


executable example-commands-server
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , commands-server


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , commands-server
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Commands.Servers.Test

 build-depends:
    base
  , commands-server
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , commands-server
  , criterion
  , deepseq
